// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`initPORT should find a port by itself if no env port 1`] = `
{
  "logCalls": [
    [
      "debug",
      "🛂 - Initializing the importer!",
    ],
    [
      "debug",
      "🏭 - Initializing the PORT service.",
    ],
    [
      "debug",
      "🛂 - Dynamic import of "portfinder".",
    ],
    [
      "warning",
      "✔ - Found a free port "8000"",
    ],
  ],
}
`;

exports[`initPORT should use the env port first 2`] = `
{
  "logCalls": [
    [
      "debug",
      "🛂 - Initializing the importer!",
    ],
    [
      "debug",
      "🏭 - Initializing the PORT service.",
    ],
    [
      "warning",
      "♻️ - Using ENV port "1337"",
    ],
  ],
}
`;
